--- a/client/src/pages/Filter/Filter.scss
+++ b/client/src/pages/Filter/Filter.scss
@@ -80,7 +80,7 @@
 	.channel-videos {
 		display: grid;
 		gap: 0.7rem;
-		grid-template-columns: 1fr 1fr 1fr;
+		grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
 
 		.video {
 			border: 1px solid var(--card-border);
