--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -62,6 +62,11 @@ a {
 	text-decoration: none !important;
 }
 
+.unparsed {
+	opacity: 0.25;
+	filter: saturate(0.5);
+}
+
 // mobile
 @media only screen and (max-width: 600px) {
 	main {
