--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -7,10 +7,10 @@
 		font-weight: bold;
 		font-size: 1.3em;
 
-		transition: color 0.1s;
+		transition: opacity 0.1s;
 	}
 
 	.navbar-title:hover {
-		color: var(--secondary);
+		opacity: 0.92;
 	}
 }
