--- a/client/src/components/ChannelCard/ChannelCard.scss
+++ b/client/src/components/ChannelCard/ChannelCard.scss
@@ -19,35 +19,30 @@
 		.channel-info {
 			flex-grow: 1;
 
-			.top-info {
+			display: flex;
+			justify-content: space-between;
+			min-width: 0; // dumb fix to make overflow-wrap work in flex
+
+			.channel-name-and-subs {
+				min-width: 0; // LOVE CSS
+			}
+
+			.channel-tools {
 				display: flex;
-				justify-content: space-between;
+				flex-direction: column;
+				align-items: end;
+				gap: 0.75rem;
 
-				.filter-tools {
-					flex-shrink: 0;
-
-					display: flex;
-					flex-direction: column;
-					align-items: end;
-					gap: 0.75rem;
-
-					margin-bottom: 1rem;
-
-					.accept-buttons {
-						display: flex;
-						flex-wrap: wrap;
-						justify-content: end;
-						gap: 0.5rem;
-
-						max-width: 20rem;
-					}
-				}
+				margin-bottom: 1rem;
 			}
 
 			.channel-name {
+				flex-shrink: 0;
 				font-weight: bold;
 				font-size: 2em;
 				margin-bottom: 0.3rem;
+
+				overflow-wrap: break-word;
 			}
 
 			.channel-subscriptions {
